Add explanations on how to build and use the TestWebRTC application

--- a/TestWebRTC/gradle.properties
+++ b/TestWebRTC/gradle.properties
@@ -13,6 +13,11 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Fri Jan 12 15:09:44 CET 2018
-systemProp.http.proxyHost=10.192.64.15
+systemProp.http.proxyHost=proxy
+systemProp.https.proxyHost=proxy
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=3128
+org.gradle.parallel=false
+org.gradle.deamon=false
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/jdk/Contents/Home
+systemProp.http.proxyPort=8080
+systemProp.https.proxyPort=8080
